<resources>
    <string name="app_name">UCAFieldBookingAndroid</string>
    <string name="Salas">¡Elige una pista!</string>
    <string name="get">GET</string>
    <string name="reservar">Reservar</string>
    <string name="nombre">Nombre de la reserva</string>
    <string name="deporte">Deporte</string>
    <string name="annadir_pista">Añadir Pista</string>
    <string name="Verpista">Ver reserva</string>
    <string name="tituloFormulario">Introduzca los datos de la reserva</string>
    <string name="tituloFecha">Fecha de reserva</string>
    <string name="post">Añadir reserva</string>
    <string name="padel">Pádel</string>
    <string name="img_padel">Pista de pádel</string>
    <string name="datos1">Pistas disponibles para 2 y 4 personas</string>
    <string name="datos2">Pistas disponibles para hasta 14 personas</string>
    <string name="postReserva">Consultar reservas</string>
    <string name="idsocio_pista">Introduce tu ID de socio</string>
    <string name="tituloHora">Hora</string>
    <string name="tituloAsistentes">Asistentes</string>
    <string name="tituloComentario">Comentario</string>
    <string name="EditarReserva">Editar reserva</string>
    <string name="EliminarReserva">Eliminar reserva</string>
    <string name="tituloFormularioEditarReserva">Rellena los campos de tu reserva que quieras modificar</string>
    <string name="ModificarReserva">Guardar cambios</string>
    <string name="Creditos">Proyecto realizado por:\nIsmael Vargas y Pablo Reyes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Open navigation drawer</string>
    <string name="welcome">¡Bienvenido a UCA Field Booking!\nDesde esta aplicación podrás realizar de una manera simple e intuitiva reservas de las distintas pistas deportivas que ofrece la Universida de Cádiz.\n¡Esperamos que disfrutes!</string>
    <string name="home_title">UCA FIELD BOOKING</string>
    <string name="logo_app">logo app</string>
    <string name="navigation_header_logo">Navigation header logo</string>
    <string name="navigation_header_names">Ismael Vargas y Pablo Reyes</string>
    <string name="drawer_reservas">Reservas</string>
    <string name="drawer_salas">Salas</string>
    <string name="drawer_local">Localización</string>
    <string name="entorno">El complejo deportivo UCA se encuentra en un entorno natural, rodeado de parques en los que poder hacer otras actividades distintas a las de las propias instalaciones.</string>
    <string name="transporte">Para acceder al complejo contamos con dos medios de transporte públicos principales: Las líneas de autobuses ofrecidas por el Consorcio de Transportes y las lineas de tren de Renfe cercanías.</string>
    <string name="direccion">El complejo deportivo se encuentra en C/ República Saharaui, 3, 11519 Puerto Real, Cádiz.\nSe situa junto a la Facultad de Ciencias y el Centro Andaluz de Estudios Marinos.</string>
    <string name="tit_Local">Localización</string>
    <string name="tit_Transporte">Transporte</string>
    <string name="img_Accesos">Accesos al campus</string>
    <string name="icono_lineas_autobuses">Icono lineas autobuses</string>
    <string name="tit_Como_llegar">Cómo llegar</string>
    <string name="logo_renfe">Logo Renfe Cercanías</string>
    <string name="mapa_pistas">Mapa localización complejo deportivo</string>
    <string name="tit_servicios">Servicios</string>
    <string name="material">Material</string>
    <string name="vestuarios">Vestuarios</string>
    <string name="tit_tenis">Tenis</string>
    <string name="taquillas">Taquillas</string>
    <string name="tit_futbol">Fútbol</string>
    <string name="campo_futbol">Campo de fútbol</string>
    <string name="parking">Parking</string>
    <string name="descarga">Descargar PDF</string>
    <string name="animacion">Animación splash screen</string>
    <string name="icon_menu">Icono menú</string>
    <string name="tit_app_minus">UCA Field Booking</string>
    <string name="tituloDeporte">Selecciona un deporte</string>
    <string-array name="opciones_deporte">
        <item>Fútbol</item>
        <item>Pádel</item>
        <item>Tenis</item>
    </string-array>
</resources>