<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackground">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/header_bkg"
        android:gravity="bottom"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/iconoAppDrawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/navigation_header_logo"
            android:paddingTop="8dp"
            app:srcCompat="@mipmap/ic_launcher_round"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/home_title"
            android:fontFamily="@font/poppins_bold"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_header_names"
            android:fontFamily="@font/poppins"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton_salas"
            android:text="@string/drawer_salas"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:drawableLeftCompat="@drawable/baseline_sports_baseball_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton_reservas"
            android:text="@string/drawer_reservas"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:drawableLeftCompat="@drawable/baseline_bookmarks_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton_local"
            android:text="@string/drawer_local"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:drawableLeftCompat="@drawable/baseline_place_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>