<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/textViewReservaNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewReservaDeporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewReservaNombre"
                android:text="@string/deporte"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayoutDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/textViewReservaDeporte"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textViewReservaFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewReservaDeporte"
                    android:text="@string/tituloFecha"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewReservaHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewReservaFecha"
                    android:text="@string/tituloHora"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewReservaAsistentes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewReservaHora"
                    android:text="@string/tituloAsistentes"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewReservaComentario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewReservaAsistentes"
                    android:text="@string/tituloComentario"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewReservaComentario"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonEditarReserva"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red"
                        android:drawableLeft="@drawable/ic_modify"
                        android:text="@string/EditarReserva"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/buttonEliminarReserva"
                        android:layout_width="10dp"
                        android:layout_height="55dp"
                        android:layout_below="@id/buttonEditarReserva"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red"
                        android:drawableLeft="@drawable/ic_delete"
                        android:text="@string/EliminarReserva"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonVerReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/Verpista"
                android:textColor="@color/black"

                />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>